--- a/client/src/components/home.css
+++ b/client/src/components/home.css
@@ -72,7 +72,8 @@
     width: 70%;
     height: 80%;
     font-size: 3rem;
-    font-family: monospace;
+    font-family: "Exo 2", sans-serif;
+    font-optical-sizing: auto;
     transition-duration: 0.5s;
     /* animation: why-desc-color 8s infinite reverse ease; */
 }
@@ -124,7 +125,7 @@
 }
 .options li:hover{
     width: 50%;
-
+    background-color: #ffd86a;
   overflow-y: scroll;
 }
 .options li::-webkit-scrollbar{
@@ -214,7 +215,8 @@
     font-size: 3rem;
     margin-bottom: 1rem;
     padding-left: 1rem;
-    font-family: monospace;
+    font-family: "Exo 2", sans-serif;
+  font-optical-sizing: auto;
     color: #232F3E;
 }
 .suggestion-desc textarea{
@@ -227,7 +229,8 @@
     border: 2px solid #232F3E;
     outline: none;
     font-size: 3rem;
-    font-family: monospace;
+    font-family: "Exo 2", sans-serif;
+  font-optical-sizing: auto;
     padding-left: 1rem;
     color: #232F3E;
 }
@@ -256,7 +259,8 @@
     width: 95%;
     margin: 0% 2.5%;
     font-size: 2.5rem;
-    font-family: monospace;
+    font-family: "Exo 2", sans-serif;
+  font-optical-sizing: auto;
     color: #232F3E;
 }
 .suggestor{
@@ -264,7 +268,8 @@
     font-size: 2.5rem;
     position: relative;
     left: 70%;
-    font-family: monospace;
+    font-family: "Exo 2", sans-serif;
+    font-optical-sizing: auto;
     max-width: 20rem;
     overflow-x: hidden;
     color: #232F3E;
@@ -275,7 +280,8 @@
     font-size: 3rem;
     border-radius: 1rem;
     background: whitesmoke;
-    font-family: monospace;
+    font-family: "Exo 2", sans-serif;
+  font-optical-sizing: auto;
     outline: none;
     animation-duration: 0.4s;
     transition-property:all ;
@@ -527,14 +533,16 @@
         }
         .options{
             height: 100%;
+            margin-top: 5vw;
         }
         .options li{
             height: 100%;
             overflow: scroll;
-            border:0.5px solid #232F3E;
+            border:0.5vw solid #232F3E;
         }
         .options li:hover{
             width: 80%;
+            background-color: #ffd86a;
         }
     }
 }
