--- a/client/src/components/contacts.css
+++ b/client/src/components/contacts.css
@@ -33,7 +33,7 @@
     /* background-image: url('contactusback.avif'); */
     background-repeat: no-repeat;
     background-size: cover;
-    mix-blend-mode: luminosity;
+    /* mix-blend-mode: luminosity; */
     max-height: 80vh;
     height: 75vh;
 }
@@ -62,7 +62,7 @@
     word-wrap: break-word;
    font-size: 1.5vw;
    font-family: monospace;
-   border-radius: 0.5vw;
+   border-radius: 1vw;
    color: white;
    background-color: #0000001c;
 }
@@ -77,6 +77,7 @@
     box-sizing: border-box;
     color: white;
     background-color: #0000001c;
+    border-radius: 1vw;
 }
 .contactform textarea::-webkit-scrollbar{
     display: none;
@@ -100,7 +101,8 @@
     overflow-wrap: break-word;
     font-size: 1.2vw;
     padding: 1vw;
-    color: aliceblue;
+    color: #232F3E;
+   
 
 }
 .contactusinfo h3 {
@@ -123,6 +125,9 @@
     font-optical-sizing: auto;
     background-color: #ffd86a;
     color: #232F3E;
+    border: 2px solid #232F3E;
+    border-radius: 1vw;
+    cursor: pointer;
     /* left: 60vw; */
 }
 @media screen and (min-width:700px) {
@@ -156,6 +161,8 @@
         }
         #contact-submit{
             font-size: 2.5vw;
+            border: 2px solid #232F3E;
+            border-radius: 1vw
         }
         
     }
@@ -196,6 +203,8 @@
         }
         #contact-submit{
             font-size: 2.5vw;
+            border: 2px solid #232F3E;
+            border-radius: 1vw
         }
     }
 }
@@ -265,6 +274,8 @@
             background-color: #ffd86a;
             color: #232F3E;
             top: 2vw;
+            border: 2px solid #232F3E;
+            border-radius: 1vw;
         }
     }
 }
